# kim-mytest

./: .gitignore  Albe_Nordlund_Averback_PtC.tersoff  CMakeLists.txt  Doxyfile  Makefile  README  TODO  Tersoff_PRB37_1988_Si.tersoff  Tersoff_PRB39_1989_CSi.tersoff  Tersoff_SiC_ErhartAlbe.params  core.cpp  core.hpp  diff_total_energy_vs_particle_energy.sh  diff_total_virial_vs_particle_virial.sh  diff_total_virial_vs_virial_from_forces.sh  dsl.cpp  dsl.hpp  elastic.cpp  elastic.hpp  input.txt  mytest.cpp  mytest.hpp  mytestcore.cpp  mytestcore.hpp  ndarray.hpp  newimpl.cpp  numer_forces.cpp  numer_forces_deriv.sh  old.cpp  poisson_disk_sampling.cpp  run_quicktest.py  run_test_input.txt  run_tests.py  run_tests.sh  run_tests_quick.sh  test_benchmark.cpp  test_switch_params.cpp  test_unit_conv.cpp  test_write_params.cpp  utils.hpp
